--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ link-overleaf.txt
 trabajo_UNR.pdf
 datos/calles.gml
 Modelo/MiBiciTuBici/MiBiciTuBici.alp.autosave
+Modelo/MiBiciTuBici/cache/*
 code/.ipynb_checkpoints
