--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ trabajo_UNR.pdf
 datos/calles.gml
 Modelo/MiBiciTuBici/MiBiciTuBici.alp.autosave
 Modelo/MiBiciTuBici/cache/*
+Modelo/MiBiciTuBici/database/db.log
 code/.ipynb_checkpoints
