--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ datos/calles.gml
 Modelo/MiBiciTuBici/MiBiciTuBici.alp.autosave
 Modelo/MiBiciTuBici/cache/*
 Modelo/MiBiciTuBici/database/db.log
+Modelo/MiBiciTuBici/database/db.properties
+Modelo/MiBiciTuBici/database/db.lck
 code/.ipynb_checkpoints
