--- a/Modelo/MiBiciTuBici/pypeline.properties
+++ b/Modelo/MiBiciTuBici/pypeline.properties
@@ -1,6 +1,6 @@
-#Tue Aug 24 19:05:55 ART 2021
-exec_path=C\:\\Users\\paulina\\AppData\\Local\\Programs\\Python\\Python39\\python.exe
-command_type=PYTHON
+#Wed Aug 25 13:24:42 ART 2021
+exec_path=C\:\\Users\\loria\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe
+command_type=PYTHON_PATH
 redirect_py_output=true
 throw_error_on_failed_attempt=true
-command=python
+command=null
