--- a/Modelo/MiBiciTuBici/pypeline.properties
+++ b/Modelo/MiBiciTuBici/pypeline.properties
@@ -1,5 +1,5 @@
-#Wed Aug 25 13:24:42 ART 2021
-exec_path=C\:\\Users\\loria\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe
+#Wed Aug 25 17:32:22 ART 2021
+exec_path=C\:/Users/PC/AppData/Local/Programs/Python/Python38/python.exe
 command_type=PYTHON_PATH
 redirect_py_output=true
 throw_error_on_failed_attempt=true
