--- a/Modelo/MiBiciTuBici/pypeline.properties
+++ b/Modelo/MiBiciTuBici/pypeline.properties
@@ -1,5 +1,5 @@
-#Wed Sep 01 11:54:23 ART 2021
-exec_path=C\:\\Users\\paulina\\AppData\\Local\\Programs\\Python\\Python39\\python.exe
+#Thu Sep 02 11:20:35 ART 2021
+exec_path=C\:\\Users\\loria\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe
 command_type=PYTHON_PATH
 redirect_py_output=true
 throw_error_on_failed_attempt=true
