fix .gitignore again 😥

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,5 @@ link-overleaf.txt
 trabajo_UNR.pdf
 datos/calles.gml
 Modelo/MiBiciTuBici/MiBiciTuBici.alp.autosave
-Modelo/MiBiciTuBici/cache/*
-Modelo/MiBiciTuBici/database/db.lck
 Modelo/MiBiciTuBici/pypeline.properties
-code/.ipynb_checkpoints
+code/.ipynb_checkpoints/
