model output processing

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ trabajo_UNR.pdf
 datos/calles.gml
 Modelo/MiBiciTuBici/MiBiciTuBici.alp.autosave
 Modelo/MiBiciTuBici/pypeline.properties
+Modelo/MiBiciTuBici/model-output/
 code/.ipynb_checkpoints/
