avance en el script de python

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ datos/calles.gml
 Modelo/MiBiciTuBici/MiBiciTuBici.alp.autosave
 Modelo/MiBiciTuBici/pypeline.properties
 Modelo/MiBiciTuBici/model-output/
+Modelo/MiBiciTuBici/processed-model-output/
 code/.ipynb_checkpoints/
