--- a/Modelo/MiBiciTuBici/Pypeline para Windows/pypeline.properties
+++ b/Modelo/MiBiciTuBici/Pypeline para Windows/pypeline.properties
@@ -1,4 +1,4 @@
-#Tue Oct 05 15:56:19 ART 2021
+#Tue Oct 05 21:44:42 ART 2021
 load_last=false
 json_package_filter=com.anylogic.libraries.road,com.anylogic.libraries.rail,com.anylogic.engine.presentation,com.anylogic.libraries.pypeline,com.anylogic.libraries.processmodeling,com.anylogic.engine.markup,com.anylogic.libraries.material_handling,com.anylogic.libraries.pedestrian,com.anylogic.libraries.fluid,com.anylogic.engine.connectivity
 exec_path=C\:\\Users\\loria\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe
@@ -6,5 +6,5 @@ command_type=PYTHON_PATH
 enable=true
 redirect_py_output=true
 throw_error_on_failed_attempt=true
-json_class_filter=com.anylogic.engine.presentation.Shape,com.anylogic.engine.Scale,com.anylogic.engine.Statechart,java.awt.Color,com.anylogic.engine.CustomDistribution,java.awt.Font,com.anylogic.engine.IStatechartState,com.anylogic.engine.EventOriginator,com.anylogic.engine.AbstractLinkToAgent
+json_class_filter=com.anylogic.engine.presentation.Shape,com.anylogic.engine.Statechart,com.anylogic.engine.AbstractLinkToAgent,com.anylogic.engine.IStatechartState,com.anylogic.engine.CustomDistribution,com.anylogic.engine.EventOriginator,java.awt.Color,com.anylogic.engine.Scale,java.awt.Font
 command=null
