--- a/Modelo/MiBiciTuBici/database/db.properties
+++ b/Modelo/MiBiciTuBici/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Mon Nov 01 08:54:08 ART 2021
+#Wed Nov 03 11:51:00 ART 2021
 tx_timestamp=0
-modified=yes
+modified=no
 version=2.4.1
