--- a/Modelo/MiBiciTuBici/Pypeline para Windows/pypeline.properties
+++ b/Modelo/MiBiciTuBici/Pypeline para Windows/pypeline.properties
@@ -1,10 +1,10 @@
-#Thu Oct 07 20:01:01 ART 2021
+#Wed Nov 03 11:28:35 ART 2021
 load_last=false
 json_package_filter=com.anylogic.libraries.road,com.anylogic.libraries.rail,com.anylogic.engine.presentation,com.anylogic.libraries.pypeline,com.anylogic.libraries.processmodeling,com.anylogic.engine.markup,com.anylogic.libraries.material_handling,com.anylogic.libraries.pedestrian,com.anylogic.libraries.fluid,com.anylogic.engine.connectivity
-exec_path=C\:\\Users\\loria\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe
+exec_path=C\:\\Users\\paulina\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe
 command_type=PYTHON_PATH
 enable=true
 redirect_py_output=true
 throw_error_on_failed_attempt=true
-json_class_filter=com.anylogic.engine.presentation.Shape,com.anylogic.engine.AbstractLinkToAgent,com.anylogic.engine.Scale,com.anylogic.engine.CustomDistribution,java.awt.Color,com.anylogic.engine.EventOriginator,java.awt.Font,com.anylogic.engine.IStatechartState,com.anylogic.engine.Statechart
+json_class_filter=com.anylogic.engine.AbstractLinkToAgent,java.awt.Color,com.anylogic.engine.Statechart,com.anylogic.engine.IStatechartState,com.anylogic.engine.CustomDistribution,com.anylogic.engine.Scale,com.anylogic.engine.presentation.Shape,com.anylogic.engine.EventOriginator,java.awt.Font
 command=null
