--- a/Modelo/MiBiciTuBici/database/db.properties
+++ b/Modelo/MiBiciTuBici/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Wed Nov 03 11:51:00 ART 2021
+#Wed Nov 03 11:55:36 ART 2021
 tx_timestamp=0
-modified=no
+modified=yes
 version=2.4.1
